Fixed a bug that makes an overflow on Y-axis

--- a/overlay.css
+++ b/overlay.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 0vh;
   z-index: 999;
   display: none;
   flex-direction: column;
